@@ -1,3 +1,8 @@
+Sun Feb 15 11:45:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* variable.c (rb_define_hooked_variable): suppress false assertion
+	  with VC9.  [ruby-core:22115]
+
 Sun Feb 15 08:35:33 2009  Tanaka Akira  <akr@fsij.org>
 
 	* test/test_pp.rb: extract from lib/pp.rb.
